# lina

./: Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml
docs/: .gitignore  estrutura-basica-do-programa.md  estrutura-basica.md  index.md  introducao.md  package-lock.json
docs/.vitepress/: config.mts
docs/controle/: enquanto.md  para.md  se-senao.md  se.md
docs/exemplos/: euler.md  fibonacci.md  gregory.md  maior-numero.md  media.md  primo.md
docs/tipos/: booleano.md  numerico.md  texto.md
examples/: adicao.lino  adicao.mat  adicao.txt  enquanto.mat  enquanto.txt  entrada.txt  euler.txt  fibonacci.lino  fibonacci.mat  fibonacci.txt  gregory.txt  hello_world.mat  hello_world.txt  helloworld.txt  primos.txt
lina/: Cargo.toml
lina-wasm/: Cargo.toml
lina-wasm/src/: lib.rs
lina/src/: compiler.rs  lexer.rs  main.rs  parser.rs  syntax.rs  token.rs  vm.rs
playground/: next.config.mjs  package-lock.json  package.json
playground/app/: layout.tsx  page.tsx
playground/components/: editor-base.tsx  editor.tsx  terminal.tsx
playground/hooks/: use-lina.ts
playground/lib/: lang-def.ts  terminal.d.ts
src/: ast.rs  compiler.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  operator.rs  parser.rs  syntax.rs  token.rs  value.rs  vm.rs
web/: Cargo.toml  package-lock.json  package.json
web/src/: lib.rs  main.ts
